...
        android:layout_height="?attr/actionBarSize"
        style="@style/customBarStyle">

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/newEncounterBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        android:onClick="launchEditActivity"
        android:text="@string/edit_encounter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/creatureList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="85dp"
        android:divider="?attr/actionBarDivider"
        android:scrollbars="vertical"
        android:visibility="visible"
...
