<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditParty">

    <ListView
        android:id="@+id/encCreatures"
        android:layout_width="wrap_content"
        android:layout_height="203dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addCreatureToEncBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:clickable="false"
            android:onClick="addCreature"
            android:text="@string/add_to_combat_btn"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="startCombat"
            android:src="@android:drawable/ic_media_play" />

        <Button
            android:id="@+id/rmvCreatureToEncBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:onClick="rmvCreature"
            android:text="@string/remove_from_combat_btn"
            android:visibility="visible" />

    </LinearLayout>

    <ListView
        android:id="@+id/allEncounters"
        android:layout_width="wrap_content"
        android:layout_height="203dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp" />

</LinearLayout>